# monster-rubix

./: CMakeLists.txt  LICENSE.txt  README.md
include/: ai_ui_manager.h  center_solver.h  color.h  combined_cube.h  cube.h  cube_base.h  cube_centers.h  cube_display.h  cube_manipulator.h  cube_solver.h  cube_state.h  edge_solver.h  encoding_hasher.h  face.h  hash.h  heuristic_cube_state.h  keyboard_ui_manager.h  multi_cube_ui.h  piece.h  scramble_generator.h  search.h  search.hpp  show_ui_manager.h  three_cube_solver.h  twist.h  twist_listener.h  twist_provider.h  twist_sequence.h  twist_utils.h  ui_manager.h
resources/scripts/: black.material  blue_sticker.material  green_sticker.material  orange_sticker.material  red_sticker.material  white_sticker.material  yellow_sticker.material
src/: CMakeLists.txt  ai_ui_manager.cpp  center_solver.cpp  color.cpp  cube.cpp  cube_base.cpp  cube_centers.cpp  cube_display.cpp  cube_manipulator.cpp  cube_solver.cpp  edge_solver.cpp  face.cpp  keyboard_ui_manager.cpp  main.cpp  multi_cube_ui.cpp  piece.cpp  show_ui_manager.cpp  three_cube_solver.cpp  twist_utils.cpp  ui_manager.cpp
